--- a/index.html
+++ b/index.html
@@ -3,30 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="images/photoshopedimage.png" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
     />
-    <title>Bay Rock Cafe</title>
+    <title>Document</title>
   </head>
-  <body>
-    <header>
-      <a href="index.html" class="logo">Bay Rock Cafe</a>
-      <ul>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">MENU</a></li>
-        <li><a href="#">GALLERY</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
-    </header>
-    <div class="container">
-      <div class="background-image">
-        <h1 class="bay">BAYROCK</h1>
-        <h2>Restaurant / Cafe</h2>
-        <a href="" class="btn">Discover Story</a>
-      </div>
+  <body class="bg-secondary">
+    <div class="text-center mt-5">
+      <form style="max-width: 400px; margin: auto">
+        <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
+        <label for="First-Name" class="sr-only">First Name</label>
+        <input
+          type="text"
+          placeholder="First Name"
+          id="First-Name"
+          class="form-control"
+          required
+          autofocus
+        />
+        <label for="Last-Name" class="sr-only">Last Name</label>
+        <input
+          type="text"
+          id="Last-Name"
+          class="form-control"
+          placeholder="Last Name"
+          required
+        />
+        <label for="emailAddress" class="sr-only">Email Address</label>
+        <input
+          type="email"
+          placeholder="Email"
+          id="emailAddress"
+          class="form-control"
+          required
+          autofocus
+        />
+        <label for="password" class="sr-only">Password</label>
+        <input
+          type="password"
+          id="password"
+          class="form-control"
+          placeholder="password"
+        />
+        <div class="mt-3">
+          <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
+        </div>
+        <div class="mt-3">
+          <a href="login.html" class="btn btn-primary"
+            >Already have an account?</a
+          >
+        </div>
+      </form>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
